增加导航栏及页面跳转
增加导航栏及页面跳转

--- a/login/bar.html
+++ b/login/bar.html
@@ -2,22 +2,18 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Toggle Sidebar</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+        <title>Title</title>
+        <link rel="stylesheet" href="css/barstyle.css">
+    
 
     </head>
     <body>
-<div class="sidebar">
-    <ul>
-        <li><a class="ion-android-person" href="#"></a></li>
-        <li><a class="ion-android-wordpress" href="#"></a></li>
-        <li><a class="ion-android-chatboxes" href="#"></a></li>
-        <li><a class="ion-book" href="#"></a></li>
-        <li><a class="ion-cart" href="#"></a></li>
-        <li><a class="ion-business" href="#"></a></li>
-        <li><a class="ion-social-cloud" href="#"></a></li>
-
-</div>
+        <ul class="box">
+            <li><a href="javascript:i">信息</a> </li>
+            <li><a href="javascript:i">商店</a> </li>
+            <li><a href="javascript:i">银行</a> </li>
+            <li><a href="javascript:i">图书馆</a> </li>
+            <li><a href="javascript:i">聊天</a> </li>    
+        </ul>
     </body>
-</html>>
+</html>
