--- a/login/index.html
+++ b/login/index.html
@@ -77,13 +77,14 @@
         var x = document.getElementById('Ecardnumber').value;
         var y = document.getElementById('Password').value;
         var res = login.query(x, y);
+		alert("xxx");
         if(res == 0) alert("密码错误！");
         if(res == 1) alert("正确！");
         if(res == 2) alert("用户待审核！");
         if(res == 3) alert("用户不存在");
         if(res == 1)
         {
-            window.location.href = 'file:///C:/Users/%E5%B4%94%E5%B3%A3/Desktop/test/Great-inventor-CuiYao/login/bar.html';
+            window.location.href = 'F:\\GitHub\\Great-inventor-CuiYao\\login\\bar.html';
          }
     }
 
