--- a/login/bar.html
+++ b/login/bar.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Title</title>
         <link rel="stylesheet" href="css/barstyle.css">
-    
+        
 
     </head>
     <body>
@@ -13,7 +13,8 @@
             <li><a href="javascript:i">商店</a> </li>
             <li><a href="javascript:i">银行</a> </li>
             <li><a href="javascript:i">图书馆</a> </li>
-            <li><a href="javascript:i">聊天</a> </li>    
+            <li><a href="javascript:i">聊天</a> </li> 
+            <li><a href="javascript:i">教务</a> </li> 
         </ul>
     </body>
 </html>
