--- a/html/bar.html
+++ b/html/bar.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <ul class="box">
-            <li><a href="javascript:i">信息</a> </li>
+            <li><a href="javascript:i", onclick = "window.location.href = '../html/student.html';">信息</a> </li>
             <li><a href="javascript:i">商店</a> </li>
             <li><a href="javascript:i">银行</a> </li>
             <li><a href="javascript:i">图书馆</a> </li>
