--- a/html/index.html
+++ b/html/index.html
@@ -83,8 +83,13 @@
         if(res == 3) alert("用户不存在");
         if(res == 1)
         {
-            window.location.href = 'F:\\GitHub\\Great-inventor-CuiYao\\login\\bar.html';
-         }
+            client.eCardNumber = x;
+            if(login.isNew(x) == 1) {
+                window.location.href = '../html/student.html';
+                alert("新用户请完善信息！");
+            }
+            else window.location.href = '../html/bar.html';
+        }
     }
 
     function SignupClick()
