--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="img/bc.jpg" alt="">
+        <img class="background" src="img/BG.jpg" alt="">
         <div class="panel">
             <div class="content login">
                 <div class="switch">
@@ -19,6 +19,7 @@
                     <span id='signup'>Sign Up</span>
                 </div>
                 <form action="" method="get" autocomplete="on">
+                    <img class="png" src="img/timg.jpg" alt="">
                     <div id='username' class="input"  placeholder='Username'><input type="text" id="Username"></div>
                     <div class="input" placeholder='Ecardnumber'><input type="text" id="Ecardnumber" oninput = "value=value.replace(/[^\d]/g,'')"></div>
                     <div class="input" placeholder='Password'><input type="password" id="Password"></div>
