增加密码编辑

--- a/html/student.html
+++ b/html/student.html
@@ -68,7 +68,7 @@
         <button onClick="syalert.syhide('alert5')">取消</button>
     </div>
 </div>
-<div class="sy-btn " sy-enter="zoomIn" sy-leave="zoomOut">
+<div>
     <button class="myBtn" onclick="window.location.href = '../html/bar.html'">主选单</button>
 
 </div>
