--- a/html/trade.html
+++ b/html/trade.html
@@ -105,7 +105,7 @@
 						<div class="service-icon">
 							<i class="fas fa-paint-brush"></i>
 						</div>
-						<div class="service-title">Web Design</div>
+						<div class="service-title">修改学生信息</div>
 						<div class="service-desc">
 							做过电商项目的同学都知道，店铺装修是电商系统必备的一个功能，在某些场景下，可能是广告页制作、活动页制作、微页面制作，但基本功能都是类似的。所谓店铺装修，就是用户可以在
 							PC端进行移动页辑，属于用户高度自定义的功能。最终编辑的结果。
@@ -115,7 +115,7 @@
 						<div class="service-icon">
 							<i class="fas fa-brush"></i>
 						</div>
-						<div class="service-title">Web Design</div>
+						<div class="service-title">图书馆借阅</div>
 						<div class="service-desc">
 							做过电商项目的同学都知道，店铺装修是电商系统必备的一个功能，在某些场景下，可能是广告页制作、活动页制作、微页要通过简单的拖拽就可以实现页面的编辑，属于用户高度自定义的功能。最终编辑的结果。
 						</div>
@@ -124,7 +124,7 @@
 						<div class="service-icon">
 							<i class="fas fa-object-ungroup"></i>
 						</div>
-						<div class="service-title">Web Design</div>
+						<div class="service-title">教务选课系统</div>
 						<div class="service-desc">
 							做过电商项目的同学都知道，店铺装修是电商系统必备的一个功能，在某些场景下，可能是广告页制作、活动页制作、微页面制作，但基本功能都是拖拽就可以实现页面的编辑，属于用户高度自定义的功能。最终编辑的结果。
 						</div>
@@ -133,7 +133,7 @@
 						<div class="service-icon">
 							<i class="fas fa-paint-brush"></i>
 						</div>
-						<div class="service-title">Web Design</div>
+						<div class="service-title">银行转账系统</div>
 						<div class="service-desc">
 							PC端进行移动页面的制作，只需要通过简单的拖拽就可以实现页面的编辑，属于用户高度自定义的功能。最终编辑的结果。
 						</div>
@@ -142,7 +142,7 @@
 						<div class="service-icon">
 							<i class="fas fa-database"></i>
 						</div>
-						<div class="service-title">Web Design</div>
+						<div class="service-title">商店购买系统</div>
 						<div class="service-desc">
 							做过电商项目的同学都知道，店铺装修是电商系统必备的一个功能，在某些场景下，可能是广告页制作、活动页制。所谓店铺装修，就是用户可以在
 							PC端进行移动页面的制作，只需要通过简单的拖拽就可以实现页面的编辑，属于用户高度自定义的功能。最终编辑的结果。
@@ -152,7 +152,16 @@
 						<div class="service-icon">
 							<i class="fab fa-android"></i>
 						</div>
-						<div class="service-title">Web Design</div>
+						<div class="service-title">聊天系统</div>
+						<div class="service-desc">
+							做过电商项目的同学都知道，店铺装修是电商系统必备的一个功能，在某些场景下，可能是广告页制作、活动页制作、微页面制作，但基本需要通过简单的拖拽就可以实现页面的编辑，属于用户高度自定义的功能。最终编辑的结果。
+						</div>
+					</div>
+					<div class="service-box">
+						<div class="service-icon">
+							<i class="fab fa-android"></i>
+						</div>
+						<div class="service-title">学生信息审核</div>
 						<div class="service-desc">
 							做过电商项目的同学都知道，店铺装修是电商系统必备的一个功能，在某些场景下，可能是广告页制作、活动页制作、微页面制作，但基本需要通过简单的拖拽就可以实现页面的编辑，属于用户高度自定义的功能。最终编辑的结果。
 						</div>
