--- a/html/index.html
+++ b/html/index.html
@@ -135,8 +135,7 @@
     })
 
     $('#Ecardnumber').on('input propertychange',function(){
-        var url = head.query($("#Ecardnumber").val());
-        $('.png').attr('src', url);
+        $('.png').attr('src','img/232.jpg');
     })
 
     $('.input input').on('blur',function(){
