--- a/html/bar.html
+++ b/html/bar.html
@@ -4,16 +4,127 @@
         <meta charset="utf-8">
         <title>Title</title>
         <link rel="stylesheet" href="css/barstyle.css">
-    
-
     </head>
     <body>
-        <ul class="box">
-            <li><a href="javascript:i", onclick = "window.location.href = '../html/student.html';">信息</a> </li>
-            <li><a href="javascript:i">商店</a> </li>
-            <li><a href="javascript:i">银行</a> </li>
-            <li><a href="javascript:i">图书馆</a> </li>
-            <li><a href="javascript:i">聊天</a> </li>    
-        </ul>
+        <img class="background" src="img/1.jpg" alt="">
+        <div class="menu">
+            <div class="bar">
+                <ul class="box">
+                    <li><a class="tab" id="message" href="javascript:i">信息</a> </li>
+                    <li><a class="tab" href="javascript:i">商店</a> </li>
+                    <li><a class="tab" href="javascript:i">银行</a> </li>
+                    <li><a class="tab" href="javascript:i">图书馆</a> </li>
+                    <li><a class="tab" href="javascript:i">聊天</a> </li>    
+                </ul>
+            </div>
+        </div>
+        <div class="content">      
+            <div class = "textcontrol">
+                <h1 style="text-align: center">信息修改</h1>
+                <form action="" method="get">
+                    <p><label class="setfont">Name:      </label><input id="uname"  type="text" placeholder="请输入姓名" style="width: 140px" readonly/></p>
+                    <p><label class="setfont">ID:        </label><input id="uid" type="text"  placeholder="请输入一卡通号" style="width: 140px" readonly/></p>
+                    <p><label class="setfont">Birthday:  </label><input id="birth" name="user_birth" type="date"  style="width: 140px" /></p>
+                    <p><label class="setfont">Age:       </label><input id="age" name ="age" type="text" placeholder="请输入年龄" style="width: 140px" readonly/></p>
+                    <p><label class="setfont">BirthPlace:</label><input id="birthplace" name="birthplace" type="text" placeholder="请输入出生地"style="width: 140px"/></p>
+                    <p><label class="setfont">Dormitory: </label><input id="dormitory" type="text" placeholder="请输入宿舍"style="width: 140px"></p>
+                    <p><label class="setfont">Academy:   </label><input id="Academy" name ="Academy" type="text" placeholder="请输入学院"style="width: 140px"/></p>
+                    <div>
+                        <label class="setfont">Sex</label>
+                        <select name ="sex" id ="sex" name="sex"  disabled>
+                            <option value="女">女</option>
+                            <option value="男">男</option>
+                        </select>
+                    <label class="setfont">Identity</label>
+                    <select  class ="settext" name = "identity" id ="identity" disabled>
+                        <option value="teacher">老师</option>
+                        <option value = "student">学生</option>
+                    </select>
+                    <p></p>
+                    <div style="text-align: center">
+                        <input id="load" value="完成" type="button"  onsubmit=" return check"/>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+       
     </body>
+
+<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+<script>
+
+    $('.tab').on('click',function(){
+        var parent = $(document).find('.tagfocus');
+        parent.each(function(){
+            if($(this).hasClass('tagfocus'))
+                $(this).removeClass('tagfocus');
+        })
+
+        var parent = $(document).find('.seen');
+        parent.each(function(){
+            if($(this).hasClass('seen'))
+                $(this).removeClass('seen');
+        })
+
+        $(this).parent().addClass('tagfocus');
+        if($(this).attr('id')=="message")
+        {
+            $('.textcontrol').addClass('seen');
+        }
+        e.stopPropagation();
+    })
+
+
+
+    $(document).ready(function () {
+    $("#load").click(function () {
+         if($("#birth").val()==""){
+              check = false;
+            alert("生日不能为空");
+
+        }else if($("#birthplace").val()==""){
+              check = false;
+            alert("请输入出生地");
+          }else if($("#dormitory").val()==""){
+              check = false;
+            alert("请输入宿舍");
+          }
+          else if($("#Academy").val()==""){
+              check = false;
+            alert("请输入学院");
+
+        } else{
+             check = true;
+			  alert("你的信息已成功更改！");
+              let t = $("#birth").val();
+              x = personinfo.query(client.eCardNumber);
+			  let y = JSON.parse(x);
+              y['birthday'] = t;
+              y['birthplace'] = $("#birthplace").val();
+              y['dormitory'] = $("#dormitory").val();
+              y['gender'] = $("#sex").val();
+              y['academy'] = $("#Academy").val()
+              y['state'] = $("#identity").val();
+              x = JSON.stringify(y);
+              personinfo.update(x);
+          }
+    window.location.href = '../html/bar.html';
+    })
+})
+
+	alert(client.eCardNumber);
+    var obj = JSON.parse(personinfo.query(client.eCardNumber));
+    $("#uid").val(obj['eCardNumber']);
+    $("#uname").val(obj['name']);
+    $("#age").val(obj['age']);
+    $("#Academy").val(obj['academy']);
+    $("#birthplace").val(obj['birthplace']);
+    $("#sex").val(obj['gender']);
+    $("#identity").val(obj['state']);
+    $("#dormitory").val(obj['dormitory']);
+    $("#birth").val(obj['birthday']);
+
+</script>
 </html>
+
