--- a/html/bank.html
+++ b/html/bank.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<charset="utf-8" />
+	<meta charset="utf-8" />
 	<title>银行信息管理</title>
 </head>
 
@@ -10,18 +10,20 @@
 <div class="searchBox" id="search_box">
 	<a id="search" type="button" onclick="searchFct()">余额查询</a>
 	<br/><br/><br/><br/><br/><br/>
-	<img src="timg.jpg" id="piggyBank" width="200" align="bottom">
+	<img src="image/bank.jpg" id="piggyBank" width="200" align="bottom">
 	<p style="text-align: center">您的余额为：
 		<input type="text" id="balance" value="0.0"></p>
 </div>
 <div class="transferBox" id="login_transfer">
 	<a id="transfer" type="button" onclick="transferFct()">转账</a>
-	<p class="transferTo">转账对象
-		<input type="text" id="transferTo" name="transferTo" placeholder="请输入转账对象"></p>
 	<p style="text-align: center">转账金额
-		<input type="text" id="transferAmount" value="" placeholder="请输入转账金额"></p>
-	<p style="text-align: center;">交易密码
-		<input type="password" id="password" name="transferTo" placeholder="请输入交易密码"></p>
+		<input type="text" id="transferAmount" value="" placeholder="请输入转账金额" /></p>
+	<p style="text-align: center">交易密码
+		<input type="password" id="password" name="transferTo" placeholder="请输入交易密码" /></p>
+	<p style="text-align: center">
+		<input type="radio" name="toecard" value="2" checked="checked"/>一卡通充值
+		<input type="radio" name="toecard" value="0" />银行卡充值
+	</p>
 </div>
 
 
@@ -29,16 +31,47 @@
 
 <script type="text/javascript">
 function transferFct(){
-	//需要验证交易密码
-	alert("转账成功！");
+	var y = bankinfo.query("213170001");
+	var a = JSON.parse(y);
+	var pwd = $("#password").val();
+	var ac = $("#transferAmount").val();
+	alert(a['balance']);
+	alert(a['password']);
+	var d = null;
+	var obj = document.getElementsByTagName("input");
+	for(var i=0;i<obj.length;i++){
+		if (obj[i].checked){
+			d = obj[i].value;
+		}
+	}
+	if (ac==""|| isNaN(ac) || ac<0){
+		alert("请输入正确的金额数目！");
+	}
+	else {
+		if(pwd == a['password']){
+			if(ac <= a['balance']){
+				a['transferAmount'] = ac;
+				a['transferTo'] = d;
+				bankinfo.update(JSON.stringify(a));
+				alert("转账成功！");
+			}
+			else{
+				alert("银行卡余额不足！");
+			}
+		}
+		else{
+			alert("密码错误！");
+		}
+	}
 }
 function searchFct(){
 	//gif动画
 	var imgObj = document.getElementById("piggyBank");
-	var Flag=(imgObj.getAttribute("src",2)=="timg.jpg")
-	imgObj.src=Flag?"timg.gif":"timg.jpg";
-	var a = Bank_Info.query(213170001);
-	var r = document.getElementById("balance");
+	var Flag=(imgObj.getAttribute("src",2)=="image/bank.jpg")
+	imgObj.src=Flag?"image/bank.gif":"image/bank.jpg";
+	var a = bankinfo.query("213170001");
+	var y = JSON.parse(a);
+	$("#balance").val(y['balance']);
 
 }
 
