--- a/html/library.html
+++ b/html/library.html
@@ -25,12 +25,12 @@
   <th>状态</th>
 </tr>
 <tr align="center">
-<td>1</td>
-<td>22</td>
-<td>333</td>
-<td>4444</td>
-<td>55555</td>
-<td>666666</td>
+<td>uid</td>
+<td>uname</td>
+<td>editor</td>
+<td>public</td>
+<td>category</td>
+<td>state</td>
 </tr>
 <tr align="center">
 <td>1</td>
@@ -58,14 +58,24 @@
 <script>
 $(document).ready(function(){
 	$("#borrow").click(function(){
-		
+		<!-- if($("#state").val()=="true"){
+              check = false;
+              alert("图书已借出")
+              else-->
 		alert("借阅成功")
 	})
 })
-
+alert(client.bookname);
+    var obj = JSON.parse(bookinfo.query(client.bookname));
+    $("#uid").val(obj['BOOK_ID']);
+    $("#uname").val(obj['BOOK_NAME']);
+    $("#public").val(obj['BOOK_PUB']);
+    $("#category").val(obj['Category']);
+    $("#state").val(obj['BE_BORROWED']);
+    $("#editor").val(obj['BOOK_EDIT']);
 </script>
 
-<body background="123.jpg"
+<body background="image/123.jpg"
 style=" background-repeat: no-repeat ;
 background-size:100% ;" >
 <style type="text/css">
@@ -117,6 +127,8 @@ background-size:100% ;" >
     }
 
 
+
 	</style>
 </body>
+
 </html>
