--- a/html/admin.html
+++ b/html/admin.html
@@ -32,14 +32,14 @@
 
 $(document).ready(function(){
 	$("#del").click(function(){
-		<!--数据库存在 -->
+		<!--数据库存在 insert(); -->
 		alert("删除成功")
 	})
 })
 
 $(document).ready(function(){
 	$("#add").click(function(){
-		<!-- if($("#bookname").val()=="" -->
+		<!-- if($("#bookname").val()=="" ;delete()	-->
 		alert("添加成功")
 	})
 })
